# roxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_ru.md  docker-compose.yml  report.md
config/: config.yml  logging_theme.yml
docs/: protocol-design.md
proptest-regressions/: protocol.txt
src/: auth.rs  client.rs  config.rs  constants.rs  crypto.rs  lib.rs  main.rs  protocol.rs  server.rs
src/logging/: mod.rs
src/obfuscation/: mod.rs  padding.rs  timing.rs  traffic_shaper.rs
src/transport/: mod.rs  quic.rs
src/transport/socks5/: client.rs  mod.rs  protocol.rs  server.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/screens/: dashboard.rs  mod.rs  users.rs
