[package]
name = "roxy"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "DPI bypass proxy with SOCKS5, TLS 1.3, TUI monitoring, and optional QUIC"
readme = "README.md"
license = "MIT"

[dependencies]
# Core async runtime - OPTIMIZED: selective features (removed unused process, test-util, etc)
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "fs", "signal"] }

# TLS 1.3 encryption
rustls = { version = "0.22", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.25"

# Certificate generation and handling
rcgen = { version = "0.14", features = ["crypto"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI argument parsing and command routing
clap = { version = "4.5", features = ["derive"] }

# Error handling and logging - OPTIMIZED: removed extra features
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec","ansi"] }
tracing-appender = { version = "0.2", default-features = false }

# Cryptography: RNG, stream cipher, and hashing
rand = "0.8"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
subtle = "2.5"

# Protocol utilities
uuid = { version = "1.0", features = ["v4"] }
byteorder = "1.5"
base64 = "0.22"
unicode-normalization = "0.1"

# Authentication via SCRAM-SHA-256
rpassword = "7.0"
rustls-native-certs = "0.6"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting for DoS protection
governor = "0.6"

# File globbing for config patterns
glob = "0.3"

# Terminal UI (ratatui) - Live dashboard for monitoring
ratatui = "0.29"
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"

# HTTP metrics API (optional, for tui-remote feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

# QUIC protocol (optional, experimental)
quinn = { version = "0.10", optional = true }

[features]
default = []

# Optional: UDP-based QUIC protocol (experimental)
quic-experimental = ["dep:quinn"]

# Optional: Remote monitoring via HTTP metrics API
# Enables: roxy tui --remote http://server:9090
tui-remote = ["dep:axum", "dep:tower", "dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["test-util"] }
proptest = "1.0"
proptest-derive = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
tracing-test = "0.2"
tokio-socks = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.embedded]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"